New in version 2.4

    * Versions are now in X.Y format in order to be more elpa
      friendly.

    * Org mode integration.


New in version 2.03

    * Bug fix: incorrect display of certain dates in the viewer.

    * Major reorganization of the code to help modularization.


New in version 2.02

    * The new viewer now displays meaningful descriptors in
      non-commincation sections.

    * New interactive function `rt-liber-display-ticket' asks for a
      ticket number and does exactly what you think it does.

    * 'N' now jumps to the last comminication, as opposed to merely
      the section.

    * Disable the sub-optimal filling in the new viewer.


New in version 2.01

    * Support getting REST credentials from auth-source.


New in versions 1.0 to 1.31:

    * Upgrade to GPLv3 (with the kind permission of the people from
      Best Practical).

    * Remove the CLI interface.

    * Make sure the manual appears in ELPA.